css/mm-components-public.css
/* ... */
@media (min-width: 768px) {
  .mm-posts.image-grid.no-gutter .mm-post {
    width: 50%;
    margin: 0;
  }
  .mm-posts.image-grid.mm-masonry .mm-posts-masonry-gutter {
    width: 2%;
  }
  .mm-posts.image-grid.mm-masonry.no-gutter .mm-posts-masonry-gutter {
    width: 0%;
  }
}

/* Simple Image & Content */
.mm-posts.simple-image-content .entry-title, .mm-posts.simple-image-content .entry-meta-wrap {
  clear: none;
}

.mm-posts.simple-image-content .entry-image {
  margin: 0 15px 0 0;
}

/* Social Icons
--------------------------------------------- */
/* Defaults */
.mm-social-icons a {
  text-align: center;
  margin-right: 6px;
  display: inline-block;
}

.mm-social-icons a:last-child {
  margin-right: 0;
}

.mm-social-icons a i.icon {
  margin: 0;
  color: #99CCCC;
  width: 36px;
  height: 36px;
  font-size: 36px;
  line-height: 36px;
}

.mm-social-icons a i.icon:hover {
  color: #55aaaa;
}

/* Styles */
.mm-social-icons.circle a i.icon {
  background-color: #99CCCC;
  color: #fff;
  font-size: 24px;
}

.mm-social-icons.circle a i.icon:hover {
  background-color: #55aaaa;
  color: #fff;
}

.mm-social-icons.circle.light a i.icon {
  background-color: #999;
  color: #fff;
}

.mm-social-icons.circle.light a i.icon:hover {
  background-color: #666666;
  color: #fff;
}

.mm-social-icons.circle.medium a i.icon {
  background-color: #666;
  color: #fff;
}

.mm-social-icons.circle.medium a i.icon:hover {
  background-color: #333333;
  color: #fff;
}

.mm-social-icons.circle.dark a i.icon {
  background-color: #333;
  color: #fff;
}

.mm-social-icons.circle.dark a i.icon:hover {
  background-color: black;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-facebook {
  background-color: #3b5998;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-facebook:hover {
  background-color: #1e2e4f;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-twitter {
  background-color: #00aced;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-twitter:hover {
  background-color: #006287;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-youtube {
  background-color: #bb0000;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-youtube:hover {
  background-color: #550000;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-google-plus {
  background-color: #dd4b39;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-google-plus:hover {
  background-color: #96271a;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-instagram {
  background-color: #125688;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-instagram:hover {
  background-color: #061d2e;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-pinterest {
  background-color: #cb2027;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-pinterest:hover {
  background-color: #731216;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-linkedin {
  background-color: #007bb5;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-linkedin:hover {
  background-color: #00364f;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-vine {
  background-color: #00bf8f;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-vine:hover {
  background-color: #005943;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-flickr {
  background-color: #ff0084;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-flickr:hover {
  background-color: #99004f;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-vimeo {
  background-color: #aad450;
  color: #fff;
}

.mm-social-icons.circle.brand-colors a i.icon.fa-vimeo:hover {
  background-color: #749925;
  color: #fff;
}

.mm-social-icons.circle.small a i.icon {
  font-size: 16px;
}

.mm-social-icons.circle.large a i.icon {
  font-size: 30px;
}

.mm-social-icons.circle.ghost a i.icon {
  border-color: #99CCCC;
  color: #99CCCC;
  background-color: transparent;
  font-size: 24px;
  border-width: 1px;
  border-style: solid;
}

.mm-social-icons.circle.ghost a i.icon:hover {
  border-color: #55aaaa;
  color: #55aaaa;
}

.mm-social-icons.circle.ghost.light a i.icon {
  border-color: #999;
  color: #999;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.light a i.icon:hover {
  border-color: #666666;
  color: #666666;
}

.mm-social-icons.circle.ghost.medium a i.icon {
  border-color: #666;
  color: #666;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.medium a i.icon:hover {
  border-color: #333333;
  color: #333333;
}

.mm-social-icons.circle.ghost.dark a i.icon {
  border-color: #333;
  color: #333;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.dark a i.icon:hover {
  border-color: black;
  color: black;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-facebook {
  border-color: #3b5998;
  color: #3b5998;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-facebook:hover {
  border-color: #1e2e4f;
  color: #1e2e4f;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-twitter {
  border-color: #00aced;
  color: #00aced;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-twitter:hover {
  border-color: #006287;
  color: #006287;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-youtube {
  border-color: #bb0000;
  color: #bb0000;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-youtube:hover {
  border-color: #550000;
  color: #550000;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-google-plus {
  border-color: #dd4b39;
  color: #dd4b39;
  background-color: transparent;
}

.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-google-plus:hover {
  border-color: #96271a;
  color: #96271a;
}
/* ... */

